Changed to autoinstalled packages that are preinstalled - adding git curl and ganglia-monitor

--- a/ubuntu-14.04/preseed.cfg
+++ b/ubuntu-14.04/preseed.cfg
@@ -64,7 +64,7 @@ d-i user-setup/allow-password-weak boolean true
 d-i pkgsel/install-language-support boolean false
 
 # Individual additional packages to install
-d-i pkgsel/include string build-essential ssh curl
+d-i pkgsel/include string build-essential ssh curl git maven zip unzip wget rsync ganglia-monitor
 
 #For the update
 d-i pkgsel/update-policy select none
