--- a/ubuntu-14.04/preseed.cfg
+++ b/ubuntu-14.04/preseed.cfg
@@ -19,7 +19,7 @@ d-i keyboard-configuration/modelcode string pc105
 d-i netcfg/get_hostname string this-host
 d-i netcfg/get_domain string this-host
 
-d-i time/zone string UTC
+d-i time/zone string US/Central 
 d-i clock-setup/utc-auto boolean true
 d-i clock-setup/utc boolean true
 
