--- a/ubuntu1404/preseed.cfg
+++ b/ubuntu1404/preseed.cfg
@@ -60,8 +60,7 @@ d-i apt-setup/security_path string /ubuntu
 
 # Default user, change
 d-i passwd/root-login boolean true
-d-i passwd/root-password password password
-d-i passwd/root-password-again password password
+d-i passwd/root-password-crypted password $1$9NgiwjJx$LT1qg2Kvm6wsiI8S6v8kJ0
 
 # No other users, managed by cloud-init
 d-i passwd/make-user boolean false
