--- a/debian8/preseed.cfg
+++ b/debian8/preseed.cfg
@@ -51,8 +51,7 @@ d-i mirror/http/proxy string
 
 # Default user, change
 d-i passwd/root-login boolean true
-d-i passwd/root-password password password
-d-i passwd/root-password-again password password
+d-i passwd/root-password-crypted password $1$9NgiwjJx$LT1qg2Kvm6wsiI8S6v8kJ0
 
 # No other users, managed by cloud-init
 d-i passwd/make-user boolean false
