Some build updates
Fix some repo issues

chrony vs ntp

update test

--- a/ubuntu1604/preseed.cfg
+++ b/ubuntu1604/preseed.cfg
@@ -40,8 +40,17 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-# No proxy, plx
+d-i mirror/country string manual
+d-i mirror/http/hostname string mirrors.ccr.buffalo.edu
+d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
+
+d-i apt-setup/restricted boolean true
+d-i apt-setup/universe boolean true
+d-i apt-setup/backports boolean true
+d-i apt-setup/services-select multiselect security
+d-i apt-setup/security_host string mirrors.ccr.buffalo.edu
+d-i apt-setup/security_path string /ubuntu
 
 # Default user, change
 d-i passwd/root-login boolean true
